fix plus button z-index (#530)
The preserve-3d fix for the FF parallax broke the plus button as the
popover was always beneath the main body.

normal z-index fixes didn't apply since it was 3d z-index problem.

--- a/app/web/src/layouts/MainLayout/MainLayout.css
+++ b/app/web/src/layouts/MainLayout/MainLayout.css
@@ -1,3 +1,7 @@
 .preserve-3d-for-children * {
   transform-style: preserve-3d;
 }
+.preserve-3d-for-children {
+  transform-style: preserve-3d;
+}
+
